--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,21 @@ dist.dir=dist
 dist.jar=${dist.dir}/ISU-Project.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.BreezySwing.jar=T:\\ISS-ICS4UP-1\\mich9992\\jar Files\\BreezySwing.jar
+file.reference.core.jar=T:\\ISS-ICS4UP-1\\mich9992\\jar Files\\core.jar
+file.reference.G4P.jar=T:\\ISS-ICS4UP-1\\mich9992\\jar Files\\G4P.jar
+file.reference.hsa.jar=T:\\ISS-ICS4UP-1\\mich9992\\jar Files\\hsa.jar
+file.reference.TerminalIO.jar=T:\\ISS-ICS4UP-1\\mich9992\\jar Files\\TerminalIO.jar
+file.reference.TurtleGraphics.jar=T:\\ISS-ICS4UP-1\\mich9992\\jar Files\\TurtleGraphics.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.BreezySwing.jar}:\
+    ${file.reference.G4P.jar}:\
+    ${file.reference.TerminalIO.jar}:\
+    ${file.reference.TurtleGraphics.jar}:\
+    ${file.reference.core.jar}:\
+    ${file.reference.hsa.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
